tests/paczka1/fuzzy1/99932902.err
Error in line 2: 70MC S558 79,0
Error in line 3: 70MC S62 98,8
Error in line 7: 4huKrNYCZn S62 70,0
Error in line 12: kYEIVKNlW7K A892 69,1
Error in line 13: kYEIVKNlW7K S531 11,4
Error in line 18: 4huKrNYCZn S558 24,6
Error in line 29: QHBfO8rw Sb2 70,7
Error in line 25: QHBfO8rw A892 75,4
Error in line 26: Q0y99KLvi A892 24,5
Error in line 31: QHBfO8rw S62 44,5
Error in line 9: A892 S558 19,7
